--- a/assets/scss/partials/common/header.scss
+++ b/assets/scss/partials/common/header.scss
@@ -32,7 +32,7 @@ svg.logo,
 /*navbar*/
 .nav-item {
   text-transform: uppercase;
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: 700;
 }
 .nav-item a {
@@ -62,7 +62,7 @@ a.nav-link{
   width: 100%;
   opacity: 0.5;
   height: 8px;
-  top: 5rem;
+  top: 3.5rem;
   left: 0;
   background-color: $brown;
   transform: scaleX(0);
